# tita_locomotion

./: .gitignore  README.md
devices/commands_can/: CMakeLists.txt  README.md  package.xml
devices/commands_can/include/commands_can/: commands_can_node.hpp
devices/commands_can/src/: commands_can_node.cpp  main.cpp
devices/tita_robot/: CMakeLists.txt  README.md  package.xml
devices/tita_robot/include/protocol/: can_utils.hpp  socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
devices/tita_robot/include/tita_robot/: can_receiver.hpp  can_sender.hpp  def_can.h  tita_robot.hpp
devices/tita_robot/src/: can_receiver.cpp  can_sender.cpp  tita_robot.cpp
devices/tita_robot/test/: test.cpp
interaction/joy_controller/: CMakeLists.txt  README.md  package.xml
interaction/joy_controller/include/joy_controller/: joy_controller.hpp
interaction/joy_controller/launch/: joy_controller.launch.py
interaction/joy_controller/src/: joy_controller.cpp  joy_controller_parameters.yaml  main.cpp
interaction/keyboard_controller/: CMakeLists.txt  README.md  package.xml
interaction/keyboard_controller/include/keyboard_controller/: keyboard_controller.hpp
interaction/keyboard_controller/src/: keyboard_controller.cpp  main.cpp
libraries/qpoases/: CMakeLists.txt  package.xml
locomotion_bringup/: CMakeLists.txt  README.md  package.xml
locomotion_bringup/config/: airbot_ros2_control.yaml  tita_controllers_ros2_control.yaml
locomotion_bringup/launch/: hw_bringup.launch.py  sim_bringup.launch.py
locomotion_msgs/: CMakeLists.txt  README.md  package.xml
locomotion_msgs/msg/: PlanCommands.msg  RigidBody.msg  RobotStates.msg
tita_controllers/robot_inertia_calculator/: CMakeLists.txt  README.md  package.xml
tita_controllers/robot_inertia_calculator/config/: param.yaml
tita_controllers/robot_inertia_calculator/include/robot_inertia_calculator/: robot_inertia_calculator.hpp
tita_controllers/robot_inertia_calculator/launch/: robot_inertia_calculator.launch.py
tita_controllers/robot_inertia_calculator/src/: main.cpp  robot_inertia_calculator.cpp
tita_controllers/tita_controller/: CMakeLists.txt  README.md  package.xml  tita_controller_plugin.xml
tita_controllers/tita_controller/include/common/: Benchmark.h  RobotParameters.h  cppTypes.h  enumClass.h
tita_controllers/tita_controller/include/estimator/: LinearKFPositionVelocityEstimator.h  OrientationEstimator.h  StateEstimatorContainer.h
tita_controllers/tita_controller/include/fsm/: ControlFSMData.h  FSM.h  FSMState.h  FSMState_BalanceStand.h  FSMState_JointPD.h  FSMState_Passive.h  FSMState_RL.h  FSMState_RecoveryStand.h  FSMState_TransformDown.h
tita_controllers/tita_controller/include/lqr/: lqrBase.h  riccati_solver.h
tita_controllers/tita_controller/include/planner/: DesiredStateCommand.h  FootSwingTrajectory.h  RemoterCommandPlanner.h
tita_controllers/tita_controller/include/tensorrt_cuda/: tensor_cuda_test.hpp
tita_controllers/tita_controller/include/tita_controller/: tita_controller_node.hpp
tita_controllers/tita_controller/include/wbc/: HoQp.h  Task.h  pinocchioInterface.h
tita_controllers/tita_controller/src/: tita_controller_node.cpp  tita_controller_parameters.yaml
tita_controllers/tita_controller/src/estimator/: LinearKFPositionVelocityEstimator.cpp  OrientationEstimator.cpp
tita_controllers/tita_controller/src/fsm/: FSM.cpp  FSMState.cpp  FSMState_BalanceStand.cpp  FSMState_JointPD.cpp  FSMState_Passive.cpp  FSMState_RL.cpp  FSMState_RecoveryStand.cpp  FSMState_TransformDown.cpp
tita_controllers/tita_controller/src/lqr/: riccati_solver.cpp
tita_controllers/tita_controller/src/planner/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp
tita_controllers/tita_controller/test/: test_forward_kinematic.cpp  test_inverse_kinematic.cpp
titati_bringup/: CMakeLists.txt  package.xml
titati_bringup/config/: quadruped_basic_joint_imu.yaml
titati_bringup/launch/: quadruped_basic_joint_imu.launch.py  quadruped_controller.launch.py  quadruped_slave_controller.launch.py
titati_bringup/urdf/: titati.urdf.xacro  titati_ros2control.xacro
titati_canfd_router/: CMakeLists.txt  package.xml
titati_canfd_router/include/protocol/: can_utils.hpp  socket_can_common.hpp  socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp  visibility_control.hpp
titati_canfd_router/include/titati_canfd_router/: canfd_router_can_receive_api.hpp
titati_canfd_router/src/: canfd_router_can_receive_api.cpp  main.cpp
titati_controllers/: CMakeLists.txt  README.md  package.xml  titati_controller_plugin.xml
titati_controllers/config/: titati_controller_parameters.yaml  titati_ros2_controllers.yaml
titati_controllers/include/common/: AttitudeData.h  IMUTypes.h  LegData.h  Utilities.h  cppTypes.h  orientation_tools.h  pseudoInverse.h
titati_controllers/include/incconvexmpc/: ConvexMPCLocomotion.h  FootSwingTrajectory.h  Gait.h  RobotState.h  SolverMPC.h
titati_controllers/include/incdynamics/: FloatingBaseModel.h  MiniCheetah.h  Quadruped.h  SpatialInertia.h  spatial.h
titati_controllers/include/incestimator/: PositionVelocityEstimator.h  StateEstimatorContainer.h  TerrainEstimator.h
titati_controllers/include/incwbc/: ContactSpec.hpp  Task.hpp  WBC.hpp
titati_controllers/include/incwbc_ctrl/: WBC_Ctrl.hpp
titati_controllers/include/task/: Init.hpp  MpcLoco.hpp  PureDamper.hpp  Task.hpp  WbcStand.hpp
titati_controllers/include/titati_controller/: titati_controller_node.hpp
titati_controllers/madgwick/: ahrs.h  ahrs_madgwick.c
titati_controllers/src/: titati_controller_node.cpp
titati_controllers/src/srcconvexmpc/: ConvexMPCLocomotion.cpp  FootSwingTrajectory.cpp  Gait.cpp  RobotState.cpp  SolverMPC.cpp  convexMPC_interface.cpp
titati_controllers/src/srcdynamics/: FloatingBaseModel.cpp  Quadruped.cpp
titati_controllers/src/srcestimator/: PositionVelocityEstimator.cpp  TerrainEstimator.cpp
titati_controllers/src/srcwbc_ctrl/: WBC_Ctrl.cpp
titati_controllers/src/task/: Init.cpp  MpcLoco.cpp  PureDamper.cpp  Task.cpp  WbcStand.cpp
(+47 files in other folders)
