<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locomotion_bringup</name>
  <version>0.0.0</version>
  <description>locomotion bringup for ros2 controllers</description>
  <maintainer email="liukexin@directdrivetech.com">lkx</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>

  <depend>hardware_bridge</depend>
  <!-- <depend>airbot_hardware_bridge</depend> -->
  <depend>teleop_command</depend>
  <depend>joy_controller</depend>
  <depend>tita_bringup</depend>
  <depend>tita_description</depend>

  <!-- <depend>webots_bridge</depend> -->
  <!-- <depend>mcu_locomotion_controller</depend> -->
  <!-- <depend>tita_controller</depend> -->

  <build_depend>hardware_interface</build_depend>

  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
