<package format="3">
    <name>tita_robot</name>
    <version>0.1.0</version>
    <description>My package for both CMake and colcon</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>MIT</license>
  
    <!-- Dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend> <!-- colcon requires this -->
  </package>
  