<?xml version="1.0"?>
<package format="3">
  <name>qpoases</name>
  <version>4.0.0</version>
  <description>A ROS 2 package for qpOASES</description>

  <maintainer email="haiwang.xu@directdrivetech.com">homalozoa</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
