<?xml version="1.0"?>
<package format="3">
  <name>robot_inertia_calculator</name>
  <version>0.0.1</version>
  <description>ROS 2 package to calculate the total mass, center of mass, and inertia of a robot using Pinocchio.</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>locomotion_msgs</depend>
  <depend>Eigen3</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>
  <depend>tita_bringup</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
